[tool.poetry]
name = "ts-module"
version = "0.1.0"
description = "Universal Thompson Sampling decision module"
authors = ["Ulandaev Vladislav"]
readme = "README.md"
packages = [{include = "ts_module"}]

# ── Фаза 1+2: ядро и симуляция ─────────────────────────────
[tool.poetry.dependencies]
python      = "^3.11"
numpy       = "^1.26"       # сэмплинг, матрицы
scipy       = "^1.11"       # Beta, Normal distributions, stats tests
scikit-learn = "^1.3"       # LogisticRegression для Logistic TS
pydantic    = "^2.5"        # конфигурация и валидация
pyyaml      = "^6.0"        # загрузка YAML-конфигов

# ── Фаза 3: API + persistence (опционально) ─────────────────
[tool.poetry.group.api.dependencies]
fastapi     = "^0.104"
uvicorn     = {extras = ["standard"], version = "^0.24"}
sqlalchemy  = "^2.0"
aiosqlite   = "^0.19"
httpx       = "^0.25"       # для тестирования API

# ── Dev: тесты, линтинг, визуализация ───────────────────────
[tool.poetry.group.dev.dependencies]
pytest          = "^7.4"
pytest-asyncio  = "^0.21"
hypothesis      = "^6.88"   # property-based тесты
ruff            = "^0.1"    # линтер + форматтер
mypy            = "^1.7"    # статическая типизация
matplotlib      = "^3.8"    # графики симуляции
pandas          = "^2.1"    # анализ результатов симуляции
rich            = "^13.0"   # красивый вывод в консоль

# ── Настройки pytest ────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"
pythonpath   = ["."]

# ── Ruff: линтинг ───────────────────────────────────────────
[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["ts_module"]

# ── Mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
strict                 = false